[workspace]
resolver = "3"
members = [ "dll_loader", "rusty_dll", "hello_world_test" ]

[workspace.dependencies]
libloading = "0.8.8"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
windows = {version = "0.61.3", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Wdk_System_Memory"
]}